Add JAVA_OPTIONS environment variable to allow arbitrary jvm options to be added for container execution. Move DisableAttachMechanism to default JAVA_OPTIONS, Add HeapDumpOnOutOfMemoryError to default JAVA_OPTIONS, Directly use environment variables in docker-entrypoint.sh instead of using temporary variables in scripts, Move helper scripts to seperate scripts subdirectory, Add powershell script to trace remotelinux host with wireshark, Add helper script to start a docker container with enabled remote jmx for debugging, Remove UseCGroupMemoryLimitForHeap from default options, Overwrite JAVA_OPTIONS if you want to use it